--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -26,7 +26,7 @@ jobs:
         run: npm run lint
 
       - name: Test
-        run: npm run test -- --watch=false --coverage --browsers=ChromeHeadless
+        run: npm run test -- --watch=false --coverage
 
       - name: Build
         run: npm run build -- --configuration=production
